[package]
name = "discord_bot"
version = "0.1.0"
authors = ["L3g7 <contact@l3g7.dev>"]
edition = "2021"
description = "Discord bot for managing the GrieferUtils support server."
repository = "https://github.com/L3g7/GrieferUtils/"
license = "Apache-2.0"
publish = false

[dependencies]
dotenv = { version = "0.15.0" }
phf = { version = "0.11.1", features = ["macros"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }