[package]
name = "server"
version = "0.1.0"
authors = ["L3g7 <contact@l3g7.dev>"]
edition = "2021"
description = "Web server for managing the GrieferUtils badges, hivemind and leaderboard."
repository = "https://github.com/L3g7/GrieferUtils/"
license = "Apache-2.0"
publish = false

[dependencies]
asn1 = "0.16.1"
base64 = "0.22.0"
dotenv = "0.15.0"
futures = "0.3.30"
hex = "0.4.3"
jammdb = "0.11.0"
jsonwebtoken = "9.2.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "json"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
ring = "0.17.8"

[profile.release]
opt-level = 3
